Priority 0 cause problems with pulse mode #29412

Closed
opened 2011-11-26 21:58:36 +01:00 by Guillaume Côté · 7 comments

%%%I'm on windows 7 64 bits, this bug is on 2.6 official and 2.61 beta (r42137) and I don't know about my video card.

The bug occurs when you activate true level triggering(pulse mode) on a sensor linked to an action actuator set to loop stop with a priority of 0. The animation will play correctly once but won't do it any further. changing the priority solve the problem.

%%%

%%%I'm on windows 7 64 bits, this bug is on 2.6 official and 2.61 beta (r42137) and I don't know about my video card. The bug occurs when you activate true level triggering(pulse mode) on a sensor linked to an action actuator set to loop stop with a priority of 0. The animation will play correctly once but won't do it any further. changing the priority solve the problem. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Moved from Blender 2.5 Bug Tracker to Game Engine%%%

%%%Moved from Blender 2.5 Bug Tracker to Game Engine%%%

%%%(Note to self) This report might contain additional information on the bug: http://projects.blender.org/tracker/?group_id=9&atid=306&func=detail&aid=31276%%%

%%%(Note to self) This report might contain additional information on the bug: http://projects.blender.org/tracker/?group_id=9&atid=306&func=detail&aid=31276%%%

%%%I've committed a fix for this as r48218. If it does not solve your problem, this bug report can be reopened. If it caused a new problem, please open a new report.

Also, for future reference, please name your attached blend files something other than untitled. ;)%%%

%%%I've committed a fix for this as r48218. If it does not solve your problem, this bug report can be reopened. If it caused a new problem, please open a new report. Also, for future reference, please name your attached blend files something other than untitled. ;)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%You don't like my artistic sense of renaming? :'(

Thanks for fixing it.=P How can I test to see if it works correctly on my cpu? Do I need to download the r48218 version of blender on graphicall?%%%

%%%You don't like my artistic sense of renaming? :'( Thanks for fixing it.=P How can I test to see if it works correctly on my cpu? Do I need to download the r48218 version of blender on graphicall?%%%

%%%You can either get a build from graphicall or from http://builder.blender.org/download/%%%

%%%You can either get a build from graphicall or from http://builder.blender.org/download/%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29412
No description provided.