Fix for [#29412] "Priority 0 cause problems with pulse mode" reported by Guillaume Côté.

Right now this is being fixed by not allowing the exact same action (action, start/end frames, speed, etc) to be played if it's already playing. Hopefully this will not cause more issues than it solves.